# registry-as-code

./: .env.example  .gitignore  MIGRATION.md  Makefile  README.md  pyproject.toml  registry_generator.py
.agent/: rules.md  structure.md
.github/workflows/: test.yml
scripts/: dump_context.py
src/: config.py
src/ai_native_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/core/: logging.py  logic.py  result.py
src/infrastructure/adapters/: external.py
src/interface/: main.py
tests/unit/: test_logic.py
